css/main.css
body {
    background: rgba(0, 0, 0, 0.9);
    margin: 0;
    color: #fff;
    font-family: 'OCR A', Segoe UI, Tahoma, Geneva, Verdana, sans-serif;
  }
  
  .showcase::after {
    content: '';
    height: 100vh;
    width: 100%;
    background-image: url("../img/warmth.jpg");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    display: block;
    filter: blur(10px);
    -webkit-filter: blur(10px);
    transition: all 1000ms;
  }
  
  .showcase:hover::after {
    filter: blur(0px);
    -webkit-filter: blur(0px);
  }
  
  .showcase:hover .content {
    filter: blur(2px);
    -webkit-filter: blur(2px);
  }
  
  .context {
    max-width: 960px;
    margin: auto;
    overflow: hidden;
    padding: 4rem 1rem;
    
  }
  .content {
    position: absolute;
    z-index: 1;
    top: 10%;
    left: 50%;
    margin-top: 105px;
    margin-left: -145px;
    width: 300px;
    height: 350px;
    text-align: center;
    transition: all 1000ms;
  }
  
  .content .logo {
    height: 180px;
    width: 180px;
  }
  
  .content .title {
    font-size: 2.2rem;
    margin-top: 1rem;
  }
  
  .content .text {
    line-height: 1.7;
    margin-top: 1rem;
  }
  
  .container {
    max-width: 960px;
    margin: auto;
    overflow: hidden;
    padding: 4rem 1rem;
  }
  
  .tab {
    display: inline-block;
    overflow: hidden;
    position: relative;
    margin: 0;
    transition: all 0.5s ease-in-out 0.1s;
    list-style-type: none;
  }
  .tab:hover {
    transform: scale(1.1);
    color: #00ff9f;
  }

  .grid-4 {
    display: grid;
    grid-gap: 20px;
    /* fractionals */
    grid-template-columns: repeat(4, 1fr);
  }
  
  .grid-2 {
    display: grid;
    grid-gap: 20px;
    grid-template-columns: repeat(2, 1fr);
  }
  
  .center {
    text-align: center;
    margin: auto;
  }
  
  .bg-light {
    background: #f4f4f4;
    color: #333;
  }
  
  .bg-dark {
    background: #333;
    color: #f4f4f4;
  }
  
  footer {
    padding: 2.2rem;
  }
  
  footer p {
    margin: 0;
  }
   /* ------------------------ media queries */
  /* Small Screens */
  @media (max-width: 560px) {
    .showcase::after {
      height: 50vh;
      filter: blur(0px);
    }
  
    .content {
      top: 5%;
      margin-top: 5px;
    }
  
    .content .logo {
      height: 140px;
      width: 140px;
    }
  
    .content .text {
      display: none;
    }
  
    .grid-4,
    .grid-2 {
      grid-template-columns: 1fr;
    }
  
    .services div {
      border-bottom: #333 dashed 1px;
      padding: 1.2rem 1rem;
    }
  }
  
  /* Landscape */
  @media (max-height: 500px) {
    .content .title,
    .content .text {
      display: none;
    }
  
    .content {
      top: 0;
    }
  }
  

